TM-11632 Add initial implementation of tds-checkbox

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -34,6 +34,7 @@
 							<input type="checkbox" [(ngModel)]="selectAll" (change)="onSelectAll()" name="selectAll">
 						</label>
 					</div>
+					<tds-checkbox name="assetsSelector" [hasThirdState]="true" (changeState)="onChangeAssetsSelector($event)"></tds-checkbox>
 				</div>
 			</div>
 		</ng-template>
