TM-11632 Add temporary inline styles to tds-checkbox component

--- a/web-app/tds/web-app/app-js/shared/components/tds-checkbox/tds-checkbox.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/tds-checkbox/tds-checkbox.component.html
@@ -1,1 +1,12 @@
-<input type="checkbox" #tdsCheckbox (change)="onChange(currentState)" />
+<style>
+	.tds-checkbox-component {
+	}
+
+		.tds-checkbox-component input[type='checkbox'] {
+			cursor: pointer
+		}
+</style>
+
+<div class="tds-checkbox-component">
+	<input type="checkbox" #tdsCheckbox (change)="onChange(currentState)" />
+</div>
