TM-11632 Passing flag to override check state based on user interaction

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -29,7 +29,7 @@
 		<ng-template kendoGridHeaderTemplate>
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<tds-checkbox name="assetsSelector" [hasThirdState]="true" (changeState)="onChangeAssetsSelector($event)"></tds-checkbox>
+					<tds-checkbox name="assetsSelector" [hasThirdState]="true" (changeState)="onChangeAssetsSelector($event)" [overrideState]="overrideCheckboxState"></tds-checkbox>
 				</div>
 			</div>
 		</ng-template>
