TM-11632 Override states depending of page changes or all items selected

--- a/web-app/tds/web-app/app-js/shared/components/tds-checkbox/tds-checkbox.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/tds-checkbox/tds-checkbox.component.html
@@ -8,5 +8,5 @@
 </style>
 
 <div class="tds-checkbox-component">
-	<input type="checkbox" #tdsCheckbox (change)="onChange(currentState)" />
+	<input type="checkbox" #tdsCheckbox (change)="onChange()" />
 </div>
