TM-11632 Display the correct affected assets on edit/delete operations

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-actions/bulk-change-actions.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-actions/bulk-change-actions.component.html
@@ -14,7 +14,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<div class="form-group">
-										{{'ASSET_EXPLORER.BULK_CHANGE.EDIT.EFFECTED_ASSETS' | translate:[selectedItems.length]}}
+										{{'ASSET_EXPLORER.BULK_CHANGE.EDIT.EFFECTED_ASSETS' | translate:[affected]}}
 									</div>
 								</div>
 								<div class="col-md-12">
