--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -11,7 +11,7 @@
 				<label>
 					<input type="checkbox" (change)="onChangeJustPlanning($event.currentTarget.checked)" [(ngModel)]="justPlanning" name="justPlanning"> Just Planning</label>
 			</div>
-			<tds-bulk-change-button [affected]="getAffectedCounter()" [selectedItems]="checkboxHelper.getBulkSelectedItems()" (operationResult)="onBulkOperationResult($event)"></tds-bulk-change-button>
+			<tds-bulk-change-button [affected]="getAffectedCounter()" [selectedItems]="dataGridCheckboxService.getBulkSelectedItems()" (operationResult)="onBulkOperationResult($event)"></tds-bulk-change-button>
 		</div>
 	    <div class="col-sm-6">
 		    <div (click)="onReload()" class="kendo-grid-toolbar__refresh-btn btnReload">
@@ -35,7 +35,7 @@
 		</ng-template>
 		<ng-template kendoGridCellTemplate let-dataItem>
             <label class="selectall-checkbox-column text-center">
-	            <input type="checkbox" [checked]="checkboxHelper.getValueBulkItem(dataItem.common_id)" (change)="setSelectedItem(dataItem.common_id, $event.target.checked)" name="checkbox_{{dataItem.common_id}}">
+	            <input type="checkbox" [checked]="dataGridCheckboxService.getValueBulkItem(dataItem.common_id)" (change)="setSelectedItem(dataItem.common_id, $event.target.checked)" name="checkbox_{{dataItem.common_id}}">
             </label>
 			<!--<div class="row">-->
 				<!--<div class="col-md-12 text-center">-->
