--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-button/bulk-change-button.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-button/bulk-change-button.component.html
@@ -1,2 +1,2 @@
-<button type="button" (click)="onClick()" class="btn btn-default btnBulkChange pull-left" id="btnBulkChange" [disabled]="!selectedItems || !selectedItems.length">
+<button type="button" (click)="onClick()" class="btn btn-default btnBulkChange pull-left" id="btnBulkChange">
 	<span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>  {{'ASSET_EXPLORER.BULK_CHANGE.TITLE' | translate}}</button>
