--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -11,7 +11,7 @@
 				<label>
 					<input type="checkbox" (change)="onChangeJustPlanning($event.currentTarget.checked)" [(ngModel)]="justPlanning" name="justPlanning"> Just Planning</label>
 			</div>
-			<tds-bulk-change-button [affected]="getAffectedCounter()" [selectedItems]="dataGridCheckboxService.getBulkSelectedItems()" (operationResult)="onBulkOperationResult($event)"></tds-bulk-change-button>
+			<tds-bulk-change-button [bulkItems]="bulkItems" (clickBulk)="onClickBulkButton()" (operationResult)="onBulkOperationResult($event)"></tds-bulk-change-button>
 		</div>
 	    <div class="col-sm-6">
 		    <div (click)="onReload()" class="kendo-grid-toolbar__refresh-btn btnReload">
