TM-11862 Replace the word "Agent" with "Dictionary" in all places within our Actions CRUD screens

--- a/web-app/tds/web-app/app-js/modules/dataIngestion/components/api-action-view-edit/api-action-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/dataIngestion/components/api-action-view-edit/api-action-view-edit.component.html
@@ -69,7 +69,7 @@
 											</div>
 										</div>
 										<div class="form-group">
-											<label for="apiActionAgent" class="col-sm-3 control-label">Agent:
+											<label for="apiActionAgent" class="col-sm-3 control-label">Dictionary:
 												<span style="color: red;" *ngIf="modalType !== actionTypes.VIEW">*</span>
 											</label>
 											<div class="col-sm-8" *ngIf="modalType !== actionTypes.VIEW">
