--- a/web-app/css/page/module/assets/dependencyAnalyzer.sass
+++ b/web-app/css/page/module/assets/dependencyAnalyzer.sass
@@ -31,34 +31,6 @@ div.content-wrapper
       
       div#graphToolbarId
         height: 26px
-        .asset-tag-selector-component
-          padding-left: 0px
-          .km-switch
-            right: 9px
-            top: 10px
-            width: 52px
-            padding-right: 3px
-            .km-switch-wrapper
-              display: none !important
-            .km-switch-container
-              .km-switch-handle
-                vertical-align: initial
-                .km-switch-label-on
-                  left: -219% !important
-          .k-multiselect
-            width: 217px !important
-            .k-multiselect-wrap ul
-              max-width: 159px
-          ul li
-            padding: inherit
-            margin-right: 0px
-          div
-            padding: 0px
-          .k-widget li span:not(.k-select) div
-            padding-top: 3px !important
-            padding-bottom: 3px !important
-          span.k-icon
-            padding-top: 13px !important
 
       // highlighting dropdown menu styles
       div#filterOptionsMenuId
@@ -124,7 +96,48 @@ div.content-wrapper
       border: 1px solid green
       & > *
         opacity: 0
-
+    div#item1,
+    div#dependencyBundleDetailsId
+      .asset-tag-selector-component
+        padding-left: 0px
+        .km-switch
+          right: 9px
+          top: 10px
+          width: 52px
+          padding-right: 3px
+          .km-switch-wrapper
+            display: none !important
+          .km-switch-container
+            .km-switch-handle
+              vertical-align: initial
+              .km-switch-label-on
+                left: -219% !important
+        .k-multiselect
+          width: 217px !important
+          .k-multiselect-wrap ul
+            max-width: 159px
+        ul li
+          padding: inherit
+          margin-right: 0px
+        div
+          padding: 0px
+        .k-widget li span:not(.k-select) div
+          padding-top: 3px !important
+          padding-bottom: 3px !important
+        span.k-icon
+          padding-top: 13px !important
+      .tag-label
+        display: inline-block
+        float: left
+        margin-top: 6px
+        margin-right: 8px
+    div#dependencyBundleDetailsId
+      .asset-tag-selector-component
+        .km-switch
+          top: 5px
+        .k-widget li span:not(.k-select) div
+          padding-top: 1px !important
+          padding-bottom: 0px !important
 // styles the person highlighting kendo listbox
 #personHighlightSelectId_listbox *
   cursor: pointer
