TM-11465 - Fixed save visibility and CSS for all asset view dropdown menu

--- a/web-app/tds/web-app/css/elements/component/asset-explorer-view-config-component.sass
+++ b/web-app/tds/web-app/css/elements/component/asset-explorer-view-config-component.sass
@@ -18,7 +18,8 @@
   .N
     background-color: #fff !important
     background-image: none !important
-
+  .dropdown-menu li a
+    cursor: pointer
 
   div.item
     max-width: 200px
