TM-11632 Add function to change the state of the checbox whenever the user changes some item selection

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/tds-checkbox/tds-checkbox.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/tds-checkbox/tds-checkbox.component.html
@@ -1,12 +1,3 @@
-<style>
-	.tds-checkbox-component {
-	}
-
-		.tds-checkbox-component input[type='checkbox'] {
-			cursor: pointer
-		}
-</style>
-
 <div class="tds-checkbox-component">
-	<input type="checkbox" #tdsCheckbox (change)="onChange()" />
+	<input type="checkbox" #tdsCheckbox (change)="onChange()" style="cursor: pointer" />
 </div>
