TM-11632 Clear selected items changing view

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-config/asset-explorer-view-config.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-config/asset-explorer-view-config.component.html
@@ -167,6 +167,7 @@
                                   (modelChange)="onPreview()"
                                   [edit]="true"
                                   [model]="model.schema"
+		                          [viewId]="model.id"
                                   [metadata]="metadata">
         </asset-explorer-view-grid>
 		<!-- /.box-body -->
