--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
@@ -50,6 +50,7 @@
                                           (modelChange)="onQuery()"
                                           [edit]="false"
                                           [model]="model.schema"
+                                          [viewId]="model.id"
                                           [metadata]="metadata">
                 </asset-explorer-view-grid>
             </div>
