--- a/web-app/tds/web-app/css/page/module/importAssets/manual-import.component.sass
+++ b/web-app/tds/web-app/css/page/module/importAssets/manual-import.component.sass
@@ -11,3 +11,9 @@ manual-import
     margin-bottom: 40px
     .progressBar-container
       padding-right: 0px
+
+  .k-grid
+    td
+      padding-left: 10px
+    a
+      color: #3c8dbc !important
