TM-10972 Finished the last changes on the DA

--- a/web-app/css/page/module/assets/dependencyAnalyzer.sass
+++ b/web-app/css/page/module/assets/dependencyAnalyzer.sass
@@ -126,11 +126,6 @@ div.content-wrapper
           padding-bottom: 3px !important
         span.k-icon
           padding-top: 13px !important
-      .tag-label
-        display: inline-block
-        float: left
-        margin-top: 6px
-        margin-right: 8px
     div#dependencyBundleDetailsId
       .asset-tag-selector-component
         .km-switch
@@ -138,6 +133,33 @@ div.content-wrapper
         .k-widget li span:not(.k-select) div
           padding-top: 1px !important
           padding-bottom: 0px !important
+    .dependencyConsoleForm
+      margin-left: 15px
+      .f-column-1,
+      .f-column-2,
+      .f-column-3
+        margin-right: 10px
+      .f-column-1,
+      .f-column-2
+        select
+          height: 34px
+      .f-column-4
+        padding-top: 7px
+        .refresh-icon
+          margin-left: 20px
+      .f-column-1
+        padding-top: 7px
+        max-width: 240px
+        label
+          font-weight: bold
+          margin-right: 10px
+      .f-column-3
+        padding-top: 1px
+        label
+          position: relative
+          top: -13px
+        #tmHighlightGroupSelector
+          display: inline-block
 // styles the person highlighting kendo listbox
 #personHighlightSelectId_listbox *
   cursor: pointer
