--- a/web-app/css/style.sass
+++ b/web-app/css/style.sass
@@ -18,6 +18,7 @@
 @import "elements/general/graph"
 @import "elements/general/tabs"
 @import "elements/general/input"
+@import "elements/general/legacy-flexbox"
 @import "shared-legacy-angular/dates-info"
 
 @import "elements/component/tds-asset-tag-selector"
