--- a/web-app/tds/web-app/app-js/modules/importAssets/components/manual-import/manual-import.component.html
+++ b/web-app/tds/web-app/app-js/modules/importAssets/components/manual-import/manual-import.component.html
@@ -144,7 +144,7 @@
                                                'fa-thumbs-down red': importResult?.status === 'error'}"></i>
                                <span>{{'IMPORT_ASSETS.MANUAL_IMPORT.IMPORT' | translate}}</span>
                            </button>
-                           <a uiSref="tds.dependencybatch_list" class="control-label col-sm-{{uiConfig.urlColSize}}">
+                           <a uiSref="{{IMPORT_BATCH_STATES.IMPORT_BATCH_LIST.name}}" class="control-label col-sm-{{uiConfig.urlColSize}}">
                                {{'IMPORT_ASSETS.MANUAL_IMPORT.GOTO_MANAGE_ASSET_BATCHES' | translate}}
                            </a>
                         </div>
