--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -34,6 +34,8 @@
     width: 50%
   .prop a
     color: #00E
+    font-weight: bold
+    cursor: pointer
   .url + .valueNW
     text-overflow: ellipsis
     overflow: hidden
