TM-10707 Move inline styles to its own sass file

--- a/web-app/tds/web-app/css/style.sass
+++ b/web-app/tds/web-app/css/style.sass
@@ -26,6 +26,8 @@
 @import "shared/components/tds-supports-depends"
 @import "shared/components/combo-box-group"
 @import "shared/components/tds-asset-tag-selector"
+@import "shared/components/aka.component"
+@import "shared/components/connector.component"
 // Specific Module Layout/Components
 @import "shared/directives/tds-ui-prompt"
 @import "shared/directives/tds-ui-modal-decorator"
