TM-9976 > Rename the new Import Module from Dependency Batch to something more appropriate * finished refactore rename for all the import batch components

--- a/web-app/tds/web-app/app-js/modules/importBatch/components/list/import-batch-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/list/import-batch-list.component.html
@@ -3,7 +3,7 @@
 </style>
 
 <!-- Main content -->
-<div class="content body tds-kendo-grid dependency-batch-list-component">
+<div class="content body tds-kendo-grid">
     <section>
         <div>
             <div class="box-body box-with-empty-header">
