TM-11805 Small CSS issue.

--- a/web-app/css/page/module/assets/dependencyAnalyzer.sass
+++ b/web-app/css/page/module/assets/dependencyAnalyzer.sass
@@ -157,8 +157,9 @@ div.content-wrapper
         padding-top: 1px
         label
           position: relative
-          top: -13px
+          top: 6px
         #tmHighlightGroupSelector
+          vertical-align: top
           display: inline-block
 // styles the person highlighting kendo listbox
 #personHighlightSelectId_listbox *
