TM-11805 Refactored HTML so it can handle the ajax call more easily

--- a/web-app/css/page/module/assets/dependencyAnalyzer.sass
+++ b/web-app/css/page/module/assets/dependencyAnalyzer.sass
@@ -127,6 +127,8 @@ div.content-wrapper
         span.k-icon
           padding-top: 13px !important
     div#dependencyBundleDetailsId
+      .dependency-filters-container
+        margin-left: -14px
       .asset-tag-selector-component
         .km-switch
           top: 5px
