TM-11901 Fixed the Refresh button to only show up when JSON file is loaded

--- a/web-app/tds/web-app/app-js/modules/dataIngestion/components/data-script-etl-builder/data-script-etl-builder.component.html
+++ b/web-app/tds/web-app/app-js/modules/dataIngestion/components/data-script-etl-builder/data-script-etl-builder.component.html
@@ -115,11 +115,11 @@
                         <div class="row">
                             <div class="col-md-12 sample-preview" >
                                 <h4 class="pull-left">{{ 'DATA_INGESTION.DATASCRIPT.DESIGNER.SAMPLE_DATA_PREVIEW' | translate }}</h4>
-                                <!-- <span *ngIf="showSampleDataRefresh()" -->
                                 <span
-                                      class="glyphicon glyphicon-refresh"
-                                      style="margin-left: 5px; margin-top: 3px; cursor: pointer; color: #5e9fcf; font-weight: bold;"
-                                      (click)="reloadSampleData()"
+                                    *ngIf="showSampleDataRefresh()"
+                                    class="glyphicon glyphicon-refresh"
+                                    style="margin-left: 5px; margin-top: 3px; cursor: pointer; color: #5e9fcf; font-weight: bold;"
+                                    (click)="reloadSampleData()"
                                 ></span>
                                 <button class="pull-right btn btn-default" (click)="toggleSection('sample')">
                                     <i class="fa" [ngClass]="collapsed.sample ? 'fa-angle-double-right' : 'fa-angle-double-down'"></i>
