TM-7653 Added buttons to the dependency analyzer graph for the new selection options

--- a/web-app/css/elements/general/graph.sass
+++ b/web-app/css/elements/general/graph.sass
@@ -122,6 +122,18 @@ div.graphContainer
           background-image: url(../icons/magifier_zoom_out.png)
         &#zoomInButtonId
           background-image: url(../icons/magnifier_zoom_in.png)
+      div.toolButton
+        width: 22px !important
+        height: 22px !important
+        background-position: 3px 3px !important
+        padding: 0px !important
+        margin-left: 3px !important;
+        &#lassoButtonId
+          background-image: url(../icons/shape_handles.png)
+        &#selectionAddButtonId
+          background-image: url(../icons/tag_blue_add.png)
+        &.toolActive
+          background-color: lightgreen;
       #highlightFormId
         &:not(.newHighlightForm)
           display: inline-block !important
