TM-10973 Fixed default operator and other small issues.

--- a/web-app/css/page/module/assets/dependencyAnalyzer.sass
+++ b/web-app/css/page/module/assets/dependencyAnalyzer.sass
@@ -104,7 +104,7 @@ div.content-wrapper
           right: 9px
           top: 10px
           width: 52px
-          padding-right: 3px
+          padding-right: -10px
           .km-switch-wrapper
             display: none !important
           .km-switch-container
@@ -112,6 +112,8 @@ div.content-wrapper
               vertical-align: initial
               .km-switch-label-on
                 left: -219% !important
+              .km-switch-label-off
+                left: 146% !important
         .k-multiselect
           width: 217px !important
           .k-multiselect-wrap ul
