--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-show/manufacturer-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-show/manufacturer-show.component.html
@@ -1,6 +1,6 @@
-<div class="modal fade in" id="device-manufacturer-component" data-backdrop="static" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-md" role="document">
-        <div class="modal-content resizable" [style.width.px]="500">
+<div class="modal fade in manufacturer-show-component" id="device-manufacturer-component" data-backdrop="static" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
             <div class="modal-header">
                 <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">×</span>
@@ -13,16 +13,16 @@
                           #deviceManufacturerForm='ngForm' class="form-horizontal left-alignment">
                         <div class="box-body">
                             <div class="form-group">
-                                <div class="col-md-6">Name:</div>
-	                            <div class="col-md-6">{{deviceManufacturer.name}}</div>
+                                <div class="col-md-3">Name:</div>
+	                            <div class="col-md-9">{{deviceManufacturer.name}}</div>
                             </div>
 	                        <div class="form-group">
-		                        <div class="col-md-6">AKA:</div>
-		                        <div class="col-md-6">{{alias}}</div>
+		                        <div class="col-md-3">AKA:</div>
+		                        <div class="col-md-9">{{alias}}</div>
 	                        </div>
 	                        <div class="form-group">
-		                        <div class="col-md-6">Description</div>
-		                        <div class="col-md-6">{{deviceManufacturer.description}}</div>
+		                        <div class="col-md-3">Description</div>
+		                        <div class="col-md-9">{{deviceManufacturer.description}}</div>
 	                        </div>
                         </div>
                     </form>
